--- a/css/main.css
+++ b/css/main.css
@@ -336,10 +336,26 @@ body {
 }
 .carousel__pagination__loadingBar {
     /* position: block; */
+    /* opacity: 1; */
     animation: loading 3000ms linear;
     width: 100%;
     height: 100%;
     border-radius: 100vh;
+}
+
+.carousel__pagination__loadingBar--fade {
+    /* animation-duration: 1000ms; */
+    /* animation: loading 1000ms reverse; */
+    /* animation: reverse; */
+    /* content: ''; */
+    /* width: 100%;
+    height: 100%;
+    border-radius: 100vh; */
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+    /* animation: reverse; */
+    /* width: 100%;
+    height: 100%;
+    border-radius: 100vh; */
 }
 
 @keyframes slideRight {
@@ -347,7 +363,6 @@ body {
         /* transform: translateX(0px); */
         height: 12px;
         width: 10px;
-        
     }
     to {
         /* transform: translateX(5px); */
@@ -356,9 +371,30 @@ body {
     }
 }
 
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        /* width: 150px; */
+    }
+    to {
+        opacity: 0;
+        /* width: 0px; */
+    }
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+        width: 150px;
+    }
+}
+
 @keyframes loading {
     0% {
         background-color: white;
+        /* display: block; */
         /* transform: scaleX(0); */
         width: 0%;
         /* height: 100%; */
@@ -378,6 +414,7 @@ body {
         width: 100%;
         opacity: 0.35;
         border-right: 4px rgb(237, 243, 237) solid;
+        /* display: none; */
     }
 }
 
