--- a/css/main.css
+++ b/css/main.css
@@ -89,10 +89,10 @@ body {
     /* z-index: 9000;
     position: relative; */
     /* overflow: auto; */
-    /* width: 100%; */
+    width: 100%;
     /* object-fit: contain; */
     /* background-size: contain; */
-    max-width: 100%;
+    /* max-width: 100%; */
     aspect-ratio: 16 / 9;
 }
 
@@ -189,7 +189,7 @@ body {
 .carousel__container::after {
     content: '';
     clear: both;
-    display: table;
+    display: block;
 }
 
 .carousel__item {
@@ -365,13 +365,16 @@ body {
         /* transform: translateX(0px); */
         height: 10px;
         /* height: 12px; */
-        width: 24px;
+        width: 28px;
+        /* width: 24px; default */
     }
     to {
         /* transform: translateX(5px); */
         height: 5px;
+        /* height: 10px; */
         /* height: 8px; */
-        width: 28px;
+        width: 20px;
+        /* width: 28px;default */ 
     }
 }
 @keyframes defaultslideRight {
